<resources>
  <string name="app_name">CSHAD iSentinel News</string>
  <string name="expo_runtime_version">3.2608.01</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
</resources>